# rust-timer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: audit.yml  build-release-asset.yml  check.yml
src/: banner.rs  cli.rs  main.rs  timer.rs
